css/style.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}

@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}

:root {
  --white-color: #fff;
  --main-transition: 0.3s;
}

ul {
  list-style: none;
  padding: 0;
}

a {
  text-decoration: none;
}

.container {
  padding: 0px 15px;
  margin: 0px auto;
}

/* start component */
.special-head {
  position: relative;
  text-align: center;
  color: var(--white-color);
  font-size: 40px;
  margin: 0;
  margin-bottom: 50px;
  left: 50%;
  transform: translateX(-50%);
  width: fit-content;
  text-transform: uppercase;
  letter-spacing: 10px;
}

/* end component */

html {
  scroll-behavior: smooth;
}

::-webkit-scrollbar {
  width: 15px;
  scroll-behavior: smooth;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #00ac7c;
  transition: var(--main-transition);
}

::-webkit-scrollbar-thumb:hover {
  background: #004f38;
}

::-webkit-scrollbar-track {
  box-shadow: 0 0 10px inset #cdcdcd;
  border-radius: 10px;
}

body {
  background-color: #1f1f1f;
  font-family: "Cairo", sans-serif;
}

header {
  background-color: var(--bg-main-color);
  position: fixed;
  top: 0;
  z-index: 1000;
}

header .container {
  min-height: 70px;
  padding-left: 50px;
  padding-right: 50px;
}

@media (max-width: 767px) {
  header .container {
    justify-content: space-between;
    flex-direction: row-reverse;
    padding-left: 10px;
    padding-right: 10px;
  }
}

header .toggle-menu {
  color: var(--white-color);
  justify-content: flex-end;
  font-size: 30px;
  cursor: pointer;
  transition: var(--main-transition);
}

@media (min-width: 768px) {
  header .toggle-menu {
    display: none;
  }
}

@media (max-width: 767px) {
  header .links ul {
    display: none;
  }

  header .toggle-menu {
    padding: 0;
  }

  header .toggle-menu:hover + ul {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 100%;
    left: 50px;
    width: calc(100% - 100px);
    background-color: var(--bg-main-color);
    left: 0;
    width: 100%;
    padding-right: 50px;
    padding-left: 50px;
  }
}

header .links ul li a {
  color: var(--paragraph-color);
  transition: var(--main-transition);
}

@media (max-width: 767px) {
  header .links ul li a {
    padding: 10px;
    display: flex;
    align-items: center;
  }
}

header .links ul li a.active {
  color: var(--white-color);
}

header .links ul li a:hover {
  color: var(--white-color);
}

header .name {
  margin-right: auto;
  margin-left: auto;
}

@media (max-width: 767px) {
  header .name {
    margin: 0;
    transform: translateX(0);
  }
}

header .name a {
  color: var(--white-color);
  font-size: 25px;

  font-weight: bold;
}

header .icons i {
  font-size: 15px;
}

@media (max-width: 767px) {
  header .icons {
    display: none;
  }
}

/* landing */
.landing {
  background-image: url(../images/landing.jpg);
  background-size: cover;
  height: 100vh;
  position: relative;
}

.landing::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(83 94 101 / 50%);
  z-index: 1;
}

.landing .text {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: var(--white-color);
  z-index: 2;
}

.landing .text h1 {
  font-size: 70px;
  line-height: 100px;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  text-align: center;
  overflow: hidden;
  white-space: nowrap;
  animation: control-width 3s steps(28) both;
}

@keyframes control-width {
  from {
    width: 0;
  }

  to {
    width: 418px;
  }
}

@media (max-width: 767px) {
  .landing .text h1 {
    font-size: 50px;
    line-height: 60px;
  }
}

.landing .text p {
  font-size: 20px;
  color: var(--paragraph-color);
}

/* about */
.about .container {
  justify-content: center;
  gap: 20px;
}

@media (max-width: 767px) {
  .about .container {
    flex-direction: column;
  }
}

.about .image img {
  width: 200px;
  height: 200px;
  /* png */
  width: 150px;
  height: 150px;
  border-radius: 50%;
  margin-right: 20px;
}

@media (max-width: 767px) {
  .about .image img {
    margin-right: auto;
    margin-bottom: 20px;
  }
}

.about .info {
  order: 2;
}

.about .personal-info {
  line-height: 1.6;
}

.about .info-header {
  margin-bottom: 15px;
}

.about .personal-skills {
  order: 1;
}

.about h3 {
  text-align: center;
}

.about .personal-skills {
  min-width: 300px;
}

.about .personal-skills .prog-holder .prog {
  height: 20px;
  background-color: var(--paragraph-color);
  margin-bottom: 20px;
}

.about .personal-skills .prog-holder .prog span {
  display: block;
  background-color: #00ac7c;
  height: 100%;
  position: relative;
  border-radius: 15px;
}

.about .personal-skills .prog-holder .prog span::before {
  content: attr(data-progress);
  position: absolute;
  color: var(--main-color);
  border-radius: 5px;
  right: 0;
  width: fit-content;
  padding: 3px 5px;
  font-size: 12px;
  font-weight: bold;
}

/* services */
.services .container {
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 80px;
}

.services .box {
  background-color: var(--bg-main-color);
  transition: var(--main-transition);
}

.services .box i {
  color: white;
  display: block;
  text-align: center;
  font-size: 40px;
  margin-bottom: 15px;
}

.services .box .title {
  margin: 0 0 30px;
  background-color: #503d4d;
  color: var(--white-color);
  padding: 15px;
  width: calc(100% + 80px);
  left: -40px;
  text-align: center;
  font-size: 20px;
}

.services .box .title::before,
.services .box .title::after {
  content: "";
  border-width: 10px;
  border-style: solid;
  position: absolute;
}

.services .box .title::before {
  border-color: #5e4a77 #5e4a77 transparent transparent;
  left: 0;
  bottom: -19px;
}

.services .box .title::after {
  border-color: #5e4a77 transparent transparent #5e4a77;
  right: 0;
  bottom: -19px;
}

.services .box p {
  line-height: 1.6;
  color: var(--paragraph-color);
}

/* portfolio */
.portfolio .container {
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 40px;
}

.portfolio .box {
  background-color: var(--bg-main-color);
  overflow: hidden;
  cursor: pointer;
  box-shadow: 0 0 10px #9a9a9a;
  transition: var(--main-transition);
}

.portfolio .box::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  background-color: rgb(0, 0, 0, 20%);
  z-index: -1;
  transition: 0.3s;
}

.portfolio .box:hover::before {
  width: 100%;
  height: 100%;
  z-index: 0;
}

.portfolio .box img {
  max-width: 100%;
}

.portfolio .box .icon {
  position: absolute;
  top: 5px;
  right: -25px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
  transition: var(--main-transition);
}

.portfolio .box:hover .icon {
  right: 5px;
}

.portfolio .box .icon i {
  transition: var(--main-transition);
  color: black;
  transition: var(--main-transition);
  color: black;
  background-color: white;
  border-radius: 50%;
  width: 25px;
  height: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.portfolio .box .icon i:hover {
  color: #865465;
}

.portfolio .box .info .title {
  font-size: 20px;
  color: var(--white-color);
}

.portfolio .box .info p {
  color: var(--paragraph-color);
  font-size: 14px;
  margin-top: 10px;
}

.portfolio .box .info a {
  margin: 20px auto 0;
  display: block;
  background: #503d4d;
  color: white;
  border-radius: 10px;
  padding: 10px 20px;
  width: fit-content;
  text-align: center;
  position: relative;
}

.portfolio .box:hover + .info a {
  position: relative;
}

.portfolio .box .info a:hover {
  background-color: #865465;
  position: relative;
}

/* contact */
.contact .container {
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 20px;
  background-color: var(--bg-main-color);
  margin-bottom: 20px;
}

.contact .box {
  padding: 20px;
}

.contact .box .title {
  font-size: 20px;
  text-align: center;
  color: var(--white-color);
  margin-bottom: 20px;
}

.contact .box form input {
  width: 100%;
  padding: 5px 10px;
  border-radius: 10px;
  background-color: var(--paragraph-color);
}

.contact .box form select {
  width: 100%;
  padding: 0px 10px;
  border-radius: 10px;
  background-color: var(--paragraph-color);
}

.contact .box form input:not(:last-child) {
  margin-bottom: 20px;
}

.contact .box form input:focus,
.contact .box form select:focus {
  outline: none;
}

.contact .box form input::placeholder {
  color: black;
}

.contact .box form select {
  margin-bottom: 20px;
}

.contact button {
  width: 100px;
  border-radius: 10px;
  margin: 0 auto;
  background-color: #00ac7c;
  border: none;
  font-weight: bold;
  cursor: pointer;
  justify-content: center;
  height: 45px;
  grid-area: 2 / 2 / 2 / 2;
}

@media (max-width: 767px) {
  .contact button {
    grid-area: auto;
  }
}

.contact button:hover {
  background: #004f38;
}

.contact button:focus {
  outline: none;
}

.contact .icons {
  justify-content: center;
  font-size: 20px;
  padding-bottom: 20px;
  grid-area: 3 / 2 / 3 / 2;
}

@media (max-width: 767px) {
  .contact .icons {
    grid-area: auto;
  }
}

.contact .icons p {
  color: var(--paragraph-color);
  margin-right: 10px;
  text-wrap: nowrap;
}

.contact .icons a {
  transition: var(--main-transition);
}

.contact .icons a:hover {
  color: #865465;
}

.contact .icons a:not(:last-child) {
  margin-right: 10px;
}

